feat(server): implement to delete partnership
